updated site 7/16 [graphic design, photography and fine art pages]. (still in progress)

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -11,8 +11,9 @@
   color: white;
   text-decoration: none;
   font-size: 2rem;
-  font-weight: bold;
+  font-family: 'Abril Fatface', serif;
 }
+
 
 .nav-links {
   display: flex;
