--- a/css/photo.css
+++ b/css/photo.css
@@ -183,7 +183,7 @@
 
 /* Title text */
 .hero-title {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Abril Fatface', sans-serif;
   font-size: 3rem;
   font-weight: bold;
   color: white;
