--- a/css/main.css
+++ b/css/main.css
@@ -544,13 +544,16 @@ a.external-link:hover {
 
 .pdf-container {
   width: 100%;
-  max-width: 1000px;
-  height: 90vh; /* Makes it almost full-screen height */
-  margin: 0 auto;
-  padding: 1rem;
+  max-width: 100%;
+  overflow: hidden;
+  padding-top: 130%;
+  position: relative;
 }
 
 .pdf-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   border: none;
